--- a/styles/index.css
+++ b/styles/index.css
@@ -155,8 +155,8 @@ nav{
     gap: 20px;
 }
 .architect-img{
-    width: 100%;
-    height: 800px;
+    max-width: 100%;
+    max-height: 800px;
 }
 .love-features-cards > h1{
     font-size: 55px;
@@ -176,6 +176,7 @@ nav{
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    margin-bottom: 15px;
 }
 .feature-card > h3{
     font-weight: 600;
@@ -198,4 +199,23 @@ nav{
 }
 .experience-box-text{
     color: rgba(255, 255, 255, 0.923);
+}
+
+/* Small screen device responsiveness for Features section */
+@media screen and (max-width:576px){
+    .love-features-container{
+        flex-direction: column;
+    }
+    .experience-box{
+      left: 0;
+    }
+}
+/* Medium Size */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .love-features-container{
+        flex-direction: column;
+    }
+    .experience-box{
+        left: 25%;
+    }
 }
