--- a/styles/index.css
+++ b/styles/index.css
@@ -219,3 +219,40 @@ nav{
         left: 25%;
     }
 }
+
+
+/* Some facts section */
+.some-facts-sec{
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 10px;
+    margin-bottom: 50px;
+}
+.some-facts-sec > h1{
+    margin: 25px 0px;
+
+}
+.some-facts-sec > p{
+    margin-bottom: 35px;
+    color: rgb(114, 114, 114);
+}
+.some-facts-cards-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+    gap: 50px;
+}
+.fact-card{
+    padding: 45px 40px;
+    border: 1px solid rgb(255, 144, 14);
+    border-radius: 8px;
+    color: rgb(114, 114, 114);
+    font-weight: 600;
+    font-size: 20px;
+}
+.fact-num{
+    display: block;
+    font-size: 45px;
+    font-weight: 600;
+    color: rgb(66, 66, 66);
+}
