--- a/styles/index.css
+++ b/styles/index.css
@@ -256,3 +256,16 @@ nav{
     font-weight: 600;
     color: rgb(66, 66, 66);
 }
+
+/* small screen responsive */
+@media screen and (max-width:576px) {
+    .some-facts-cards-container{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+}
+@media screen and (min-width:576px) and (max-width:992px) {
+    .some-facts-cards-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
