Added a simple footer and all the contents of this landing site have been completed

--- a/styles/index.css
+++ b/styles/index.css
@@ -275,6 +275,7 @@ nav{
     max-width: 80%;
     margin: 0 auto;
     text-align: center;
+    margin-top: 180px;
 }
 .our-sponsor-sec > h1{
     margin-bottom: 15px;
@@ -285,7 +286,7 @@ nav{
     color: rgb(114, 114, 114);
 }
 .sponsor-cards-container{
-    margin: 50px 0;
+    margin: 100px 0;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
@@ -303,4 +304,20 @@ nav{
     .sponsor-cards-container{
         grid-template-columns: repeat(3, 1fr);
     }
+}
+
+/* Footer */
+footer{
+    padding: 100px;;
+}
+footer > p{
+    color: rgb(66, 66, 66);
+    font-size: 20px;
+    font-weight: 400;
+    max-width: 70%;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: rgb(255, 244, 231);
+    text-align: center;
 }
